--- a/app/src/main/java/me/CarlosIRamosV/app/Ui.form
+++ b/app/src/main/java/me/CarlosIRamosV/app/Ui.form
@@ -36,12 +36,12 @@
         </properties>
       </component>
       <grid id="692a3" binding="debugPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="2" left="2" bottom="2" right="2"/>
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <border type="empty"/>
         <children>
           <component id="afba7" class="javax.swing.JLabel" binding="debugViewNumElem">
             <constraints>
@@ -77,7 +77,7 @@
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="10" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Debug Panel"/>
+              <text value="Debug Panel:"/>
             </properties>
           </component>
         </children>
