Mejoras en clase

--- a/TDAListas/src/main/java/me/CarlosIRamosV/TDAListas/Ventana.form
+++ b/TDAListas/src/main/java/me/CarlosIRamosV/TDAListas/Ventana.form
@@ -13,7 +13,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Label"/>
+          <text value="Lista vaciá"/>
         </properties>
       </component>
       <vspacer id="986ce">
@@ -51,6 +51,14 @@
         </constraints>
         <properties>
           <text value="Eliminar Ultimo"/>
+        </properties>
+      </component>
+      <component id="ad567" class="javax.swing.JLabel" binding="outSize">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Tamaño: 0"/>
         </properties>
       </component>
     </children>
